<resources>
    <string name="app_name">Sentimo</string>
    <string name="title_recordings">My Journal</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_calendar">History</string>
    <string name="submit">Add a new recording</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_record">recording</string>
    <string name="default_record">Tap the button to record</string>
    <string name="stop_record">Recording successfully saved</string>
    <string name="audio_list_heading">Recordings</string>
    <string name="audio_player_label">Journal Entry</string>
    <string name="recorder_label">Sentimo: write an entry</string>
    <!-- Onboarding -->
    <string name="mountain_scene">Image</string>
    <string name="logo_silhouette">Image</string>
    <string name="app_name_lower">sentimo</string>
    <string name="welcome">Welcome to Sentimo</string>
    <string name="welcome_description">The voice journal that learns with you.</string>
    <string name="welcome_continue">continue</string>
    <string name="first_screen_description">Reflect on your day with an easy-to-use voice journal</string>
    <string name="second_screen_description">AI voice analysis helps track your mood</string>
    <string name="third_screen_description">Get to know yourself better</string>
    <string name="onboarding_sign_up">Let’s get started</string>
    <string name="onboarding_log_in">Already have an account? Log in</string>

</resources>