<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.screens.FirstScreen">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/mountain_scene"
        android:src="@drawable/onboarding1_daily" />

    <ImageView
        android:id="@+id/logo_silhouette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="43dp"
        android:contentDescription="@string/logo_silhouette"
        android:src="@drawable/logo_silhouette" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="54dp"
        android:text="@string/app_name_lower"
        android:textColor="@color/text"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="147dp"
        android:text="@string/first_screen_description"
        android:textColor="@color/text"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="370dp"
        android:layout_height="66dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="646dp"
        android:textColor="@color/text"
        android:text="@string/onboarding_sign_up"
        android:background="@drawable/sign_up_button"/>

</FrameLayout>