<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_recordingList"
        android:name="ca.uwaterloo.sentimo.ui.recordingList.AudioListFragment"
        android:label="@string/title_recordings"
        tools:layout="@layout/fragment_audio_list" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ca.uwaterloo.sentimo.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="ca.uwaterloo.sentimo.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/loadingFragment"
        android:name="ca.uwaterloo.sentimo.onboarding.LoadingFragment"
        android:label="fragment_loading"
        tools:layout="@layout/fragment_loading" />
    <fragment
        android:id="@+id/onboarding1Fragment"
        android:name="ca.uwaterloo.sentimo.onboarding.Onboarding1Fragment"
        android:label="fragment_onboarding1"
        tools:layout="@layout/fragment_onboarding1" />
    <fragment
        android:id="@+id/onboarding2Fragment"
        android:name="ca.uwaterloo.sentimo.onboarding.Onboarding2Fragment"
        android:label="fragment_onboarding2"
        tools:layout="@layout/fragment_onboarding2" />
    <fragment
        android:id="@+id/onboarding3Fragment"
        android:name="ca.uwaterloo.sentimo.onboarding.Onboarding3Fragment"
        android:label="fragment_onboarding3"
        tools:layout="@layout/fragment_onboarding3" />
</navigation>